fix layout bug

--- a/src/app/(root)/developers/page.module.css
+++ b/src/app/(root)/developers/page.module.css
@@ -2,10 +2,9 @@
     position: absolute;
     z-index: 1;
     width: fit-content;
-    height: 100;
 
     top: calc(50% - 176px/2 - 18px);
-    left: calc(50% - 316px/2 - 40px);
+    left: 10px;
 }
 
 .counter {
@@ -15,6 +14,12 @@
 
 .counter::before {
     content: '$';
+}
+
+@media (min-width: 400px) {
+    .folders {
+        left: calc(50% - 316px/2 - 40px);
+    }
 }
 
 @media (min-width: 768px) {
